# vectorization-model-service

./: .env.example  .gitignore  Makefile  README.md  deployment.md  development.md  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: deploy_docs.yml  main.yml
backend/: Dockerfile  Makefile  README.md  deployment.md  development.md  pyproject.toml  schedule.db
backend/alembic/: env.py
backend/alembic/versions/: 2023-03-04-23-15_5591a516fc47.py  2025-02-26-11-05_0af7dedfa161.py  2025-02-26-15-53_fcd7406b7112.py
backend/app/: logger.py  main.py  publisher.py  rabbitmq_client.py
backend/app/core/: config.py  metrics.py
backend/app/models/: batch_processor.py
backend/app/schemas/: vectorize_request.py
backend/app/services/: vectorization_service.py
backend/tests/: test_main.py
backend/tests/api/: test_login.py  test_user.py
backend/travel_ai_backend/app/: main.py  publisher.py
backend/travel_ai_backend/app/api/: celery_task.py  deps.py
backend/travel_ai_backend/app/api/v1/: api.py
backend/travel_ai_backend/app/core/: batch_processor.py  celery.py  config.py  connection.py  consumer.py  logging_middleware.py  security.py  validation.py
backend/travel_ai_backend/app/crud/: __init__.py  base_crud.py
backend/travel_ai_backend/app/db/: init_db.py  session.py
backend/travel_ai_backend/app/models/: base_uuid_model.py
backend/travel_ai_backend/app/schemas/: message.py  task_schema.py
flower/: Dockerfile  pyproject.toml
(+1 files in other folders)
